# MTagger

./: .gitignore  LICENSE  Makefile  README.md  config.py  main.py  pyproject.toml
llm/: main.py
metadata/: api.py  main.py
mtagger/: config.py  llm.py  metadata.py  mtagger.py  spotify.py  youtube.py
mtagger/prompt_templates/: default.j2
spotify/: api.py  spotify.py
youtube/: api.py
